<?xml version="1.0" encoding="UTF-8" ?>
<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             x:Class="BeeMemoryBank.Mobile.Pages.TreePage"
             x:Name="PageRoot"
             Title="Tree"
             BackgroundColor="{StaticResource BackgroundColor}">

    <ContentPage.ToolbarItems>
        <ToolbarItem IconImageSource="icon_new_article.svg" AutomationId="NewArticleButton" Clicked="OnNewArticleClicked" Order="Primary" />
        <ToolbarItem IconImageSource="icon_new_folder.svg" AutomationId="NewFolderButton" Clicked="OnNewFolderClicked" Order="Primary" />
        <ToolbarItem x:Name="ExpandToggle" IconImageSource="icon_expand.svg" AutomationId="ExpandToggle" Clicked="OnToggleExpandClicked" Order="Primary" />
...
                           Color="{StaticResource PrimaryColor}"
                           VerticalOptions="Center"
                           HorizontalOptions="Center"
                           ZIndex="10" />

        <RefreshView Grid.Row="1" x:Name="RefreshView" Refreshing="OnRefreshing">
            <CollectionView x:Name="TreeList"
                            AutomationId="TreeList"
                            SelectionMode="None"
                            EmptyView="No items found."
                            Margin="8,8,8,0">
                <CollectionView.ItemTemplate>
                    <DataTemplate>
...
