appId: com.beememorybank.mobile
---
- runFlow: _go_home.yaml
- tapOn:
    text: "Open navigation drawer"
- extendedWaitUntil:
    visible:
      text: "Tree"
    timeout: 30000
- tapOn:
    text: "Tree"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/TreeList"
    timeout: 30000
- scrollUntilVisible:
    element:
      text: "Movies"
    direction: DOWN
    timeout: 30000
- tapOn:
    text: "Movies"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/FolderList"
    timeout: 30000
- tapOn:
    text: "The Matrix"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/TitleLabel"
    timeout: 30000
- tapOn:
    text: "EditButton"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/TitleEntry"
    timeout: 30000
- tapOn:
    id: "com.beememorybank.mobile:id/TitleEntry"
- eraseText: 10
- inputText: "The Matrix Edited"
- tapOn:
    text: "SaveToolbarButton"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/TitleLabel"
    timeout: 30000
- assertVisible:
    text: "The Matrix Edited"
- takeScreenshot: edited
- tapOn:
    text: "EditButton"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/TitleEntry"
    timeout: 30000
- tapOn:
    id: "com.beememorybank.mobile:id/TitleEntry"
- eraseText: 17
- inputText: "The Matrix"
- tapOn:
    text: "SaveToolbarButton"
- extendedWaitUntil:
    visible:
      id: "com.beememorybank.mobile:id/TitleLabel"
    timeout: 30000
- takeScreenshot: restored
